; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_repos/extr_rev_hunt.c_compare_path_revisions.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_repos/extr_rev_hunt.c_compare_path_revisions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.path_revision = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @compare_path_revisions to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @compare_path_revisions(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.path_revision*, align 8
  %7 = alloca %struct.path_revision*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.path_revision**
  %10 = load %struct.path_revision*, %struct.path_revision** %9, align 8
  store %struct.path_revision* %10, %struct.path_revision** %6, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = bitcast i8* %11 to %struct.path_revision**
  %13 = load %struct.path_revision*, %struct.path_revision** %12, align 8
  store %struct.path_revision* %13, %struct.path_revision** %7, align 8
  %14 = load %struct.path_revision*, %struct.path_revision** %6, align 8
  %15 = getelementptr inbounds %struct.path_revision, %struct.path_revision* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load %struct.path_revision*, %struct.path_revision** %7, align 8
  %18 = getelementptr inbounds %struct.path_revision, %struct.path_revision* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = icmp eq i64 %16, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %32

22:                                               ; preds = %2
  %23 = load %struct.path_revision*, %struct.path_revision** %6, align 8
  %24 = getelementptr inbounds %struct.path_revision, %struct.path_revision* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = load %struct.path_revision*, %struct.path_revision** %7, align 8
  %27 = getelementptr inbounds %struct.path_revision, %struct.path_revision* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = icmp slt i64 %25, %28
  %30 = zext i1 %29 to i64
  %31 = select i1 %29, i32 1, i32 -1
  store i32 %31, i32* %3, align 4
  br label %32

32:                                               ; preds = %22, %21
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
